Fix buttons styles on small screen

--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -293,3 +293,15 @@ ul.blocks-list li.block-item.new-block {
 .save-settings-block {
     margin-top: 20px;
 }
+
+@media screen and (max-width: 1065px) {
+    .ju-button {
+        display: block;
+        width: 300px;
+        margin: 10px;
+    }
+
+    .inline-button-wrapper {
+        float: none;
+    }
+}
